# interface

./: Cargo.toml  LICENSE  README.md
ComputerInterface/: ComputerInterface.sln  ComputerInterface.vcxproj  ComputerInterface.vcxproj.filters  DataIn.h  Function.cpp  Function.h  Main.cpp  cApp.cpp  cApp.h  cMain.cpp  cMain.h  test_file.txt
src/: main.rs
static/: helper.js  index.html
