[package]
name = "led_interface"
version = "0.1.0"
authors = ["Jack Hayes <hayesj6816@my.uwstout.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
env_logger = "0.8"
actix-files = "0.5.0"
actix-service = "1.0.0"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.8.0"
json = "0.12"
actix-rt = "2.1.0"
actix-cors = "0.5.4"